<?xml version="1.0"?>
<package format="2">
  <name>evdev_joy</name>
  <version>0.0.1</version>
  <description>A Joystick Node for linux evdev devices</description>

  <maintainer email="franek.stark@haw-hamburg.de">Franek Stark</maintainer> 

  <license>MIT</license>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
