<?xml version="1.0"?>
<package format="2">
  <name>evdev_joy</name>
  <version>0.0.1</version>
  <description>A Joystick Node for linux evdev devices</description>

  <maintainer email="franek.stark@haw-hamburg.de">Franek Stark</maintainer> 

  <license>MIT</license>

  <depend>libevdev-dev</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <buildtool_depend>catkin</buildtool_depend>

</package>
