<package>
  <name>joy</name>
  <version>1.11.0</version>
  <license>BSD</license>

  <description>
    ROS driver for a generic Linux joystick.
    The joy package contains joy_node, a node that interfaces a
    generic Linux joystick to ROS. This node publishes a "Joy"
    message, which contains the current state of each one of the
    joystick's buttons and axes.
  </description>

  <maintainer email="jbo@jhu.edu">Jonathan Bohren</maintainer>
  <author>Morgan Quigley</author>
  <author>Brian Gerkey</author>
  <author>Kevin Watts</author>
  <author>Blaise Gassend</author>

  <url type="website">http://www.ros.org/wiki/joy</url>
  <url type="development">https://github.com/ros-drivers/joystick_drivers</url>
  <url type="bugtracker">https://github.com/ros-drivers/joystick_drivers/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>joystick</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>joystick</run_depend>

  <test_depend>rosbag</test_depend>

  <export>
    <rosbag migration_rule_file="migration_rules/Joy.bmr"/>
  </export>
</package>
