<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>joy_linux</name>
  <version>3.3.0</version>

  <description>
    ROS2 driver for a generic Linux joystick.
    Will contain a MacOS and Windows version later.
    The joy package contains joy_node, a node that interfaces a
    generic Linux joystick to ROS2. This node publishes a "Joy"
    message, which contains the current state of each one of the
    joystick's buttons and axes.
  </description>

  <maintainer email="clalancette@openrobotics.org">Chris Lalancette</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/ros/joystick_drivers</url>
  <url type="bugtracker">https://github.com/ros/joystick_drivers/issues</url>
  <author>Mikael Arguedas</author>
  <author>Morgan Quigley</author>
  <author>Brian Gerkey</author>
  <author>Kevin Watts</author>
  <author>Blaise Gassend</author>
  <author>Jonathan Bohren</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
