<package>
  <name>joystick_drivers</name>
  <version>1.11.0</version>
  <license>BSD</license>

  <description>
    This metapackage depends on packages for interfacing common
    joysticks and human input devices with ROS.
  </description>

  <url type="website">http://www.ros.org/wiki/joystick_drivers</url>
  <url type="development">https://github.com/ros-drivers/joystick_drivers</url>
  <url type="bugtracker">https://github.com/ros-drivers/joystick_drivers/issues</url>

  <maintainer email="jbo@jhu.edu">Jonathan Bohren</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>joy</run_depend>
  <run_depend>ps3joy</run_depend>  
  <run_depend>spacenav_node</run_depend>  
  <run_depend>wiimote</run_depend>  

  <export>
    <metapackage/>
  </export>
</package>
