<package>
  <name>ps3joy</name>
  <version>1.11.0</version>
  <license>BSD</license>

  <description>
    Playstation 3 SIXAXIS or DUAL SHOCK 3 joystick driver.
    Driver for the Sony PlayStation 3 SIXAXIS or DUAL SHOCK 3
    joysticks. In its current state, this driver is not compatible
    with the use of other Bluetooth HID devices. The driver listens
    for a connection on the HID ports, starts the joystick
    streaming data, and passes the data to the Linux uinput device
    so that it shows up as a normal joystick.
  </description>

  <maintainer email="jbo@jhu.edu">Jonathan Bohren</maintainer>
  <author>Blaise Gassend</author>
  <author>pascal@pabr.org</author>
  <author>Melonee Wise</author>

  <url type="website">http://www.ros.org/wiki/ps3joy</url>
  <url type="development">https://github.com/ros-drivers/joystick_drivers</url>
  <url type="bugtracker">https://github.com/ros-drivers/joystick_drivers/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rosgraph</build_depend>
  <build_depend>libusb-dev</build_depend>
  <build_depend>joystick</build_depend>
  <build_depend>bluez</build_depend>
  <build_depend>python-bluez</build_depend>

  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rosgraph</run_depend>
  <run_depend>libusb-dev</run_depend>
  <run_depend>joystick</run_depend>
  <run_depend>bluez</run_depend>
  <run_depend>python-bluez</run_depend>
</package>
