<package format="2">
  <name>spacenav</name>
  <version>3.3.0</version>
  <license>BSD</license>
  <description>
    ROS interface to the 3Dconnexion SpaceNavigator 6DOF joystick.
  </description>

  <url type="website">http://www.ros.org/wiki/spacenav_node</url>
  <url type="development">https://github.com/ros-drivers/joystick_drivers</url>
  <url type="bugtracker">https://github.com/ros-drivers/joystick_drivers/issues</url>

  <maintainer email="jbo@jhu.edu">Jonathan Bohren</maintainer>
  <author>Stuart Glaser</author>
  <author>Blaise Gassend</author>
  <author>Nils Schulte</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>libspnav-dev</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>spacenavd</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
