<package format="2">
  <name>spacenav_node</name>
  <version>1.12.0</version>
  <license>BSD</license>
  <description>
    ROS interface to the 3Dconnexion SpaceNavigator 6DOF joystick.
  </description>

  <url type="website">http://www.ros.org/wiki/spacenav_node</url>
  <url type="development">https://github.com/ros-drivers/joystick_drivers</url>
  <url type="bugtracker">https://github.com/ros-drivers/joystick_drivers/issues</url>

  <maintainer email="jbo@jhu.edu">Jonathan Bohren</maintainer>
  <author>Stuart Glaser</author>
  <author>Blaise Gassend</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend> 
  <depend>geometry_msgs</depend> 
  <depend>sensor_msgs</depend> 
  <depend>libspnav-dev</depend> 
  <depend>libx11-dev</depend>
  
  <exec_depend>spacenavd</exec_depend> 
</package>
